; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_stddialogs.c_uiMsgBox.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_stddialogs.c_uiMsgBox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GTK_MESSAGE_OTHER = common dso_local global i32 0, align 4
@GTK_BUTTONS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiMsgBox(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @windowWindow(i32* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @GTK_MESSAGE_OTHER, align 4
  %12 = load i32, i32* @GTK_BUTTONS_OK, align 4
  %13 = call i32 @msgbox(i32 %8, i8* %9, i8* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @msgbox(i32, i8*, i8*, i32, i32) #1

declare dso_local i32 @windowWindow(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
